// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem basic w/ knobs 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item title/hover text"
            >
              List Item
            </div>
          </div>
          <div
            className="iot--list-item--content--row-actions"
            onClick={[Function]}
            onKeyPress={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem testing isLargeRow overflow 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item iot--list-item__large"
    >
      <div
        className="iot--list-item--content iot--list-item--content__large"
      >
        <div
          className="iot--list-item--content--values iot--list-item--content--values__large"
        >
          <div
            className="iot--list-item--content--values--main iot--list-item--content--values--main__large"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item this could be a reaaaaaaaaaaally really long value"
            >
              List Item this could be a reaaaaaaaaaaally really long value
            </div>
            <div
              className="iot--list-item--content--values--value iot--list-item--content--values--value__large"
              title="With isLargeRow, the secondary value serves primarily as a description field for the list item.  If the content is too wide for the list item, it will be visible in a tooltip."
            >
              With isLargeRow, the secondary value serves primarily as a description field for the list item.  If the content is too wide for the list item, it will be visible in a tooltip.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem testing secondaryValue overflow 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item iot--list-item__large"
    >
      <div
        className="iot--list-item--content iot--list-item--content__large"
      >
        <div
          className="iot--list-item--content--values iot--list-item--content--values__large"
        >
          <div
            className="iot--list-item--content--values--main iot--list-item--content--values--main__large"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item this could be a really long value that can't quite fit"
            >
              List Item this could be a really long value that can't quite fit
            </div>
            <div
              className="iot--list-item--content--values--value iot--list-item--content--values--value__large"
              title="Secondary Value could also be a really, extraordinarily long value"
            >
              Secondary Value could also be a really, extraordinarily long value
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with OverflowMenu row actions 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        aria-label="Expand"
        className="iot--list-item--expand-icon"
        data-testid="expand-icon"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Expand"
      >
        <svg
          aria-label="Expand-icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </div>
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item with really long values does it ellipse when I get really long text"
            >
              List Item with really long values does it ellipse when I get really long text
            </div>
          </div>
          <div
            className="iot--list-item--content--row-actions"
            onClick={[Function]}
            onKeyPress={[Function]}
          >
            <button
              aria-controls={null}
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Open and close list of options"
              className="bx--overflow-menu bx--overflow-menu--sm"
              data-testid="overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              type="button"
            >
              <svg
                aria-label="Open and close list of options"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="16"
                  cy="8"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="16"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="24"
                  r="2"
                />
                <title>
                  Open and close list of options
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with Tags 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
          </div>
          <div>
            <div
              className="bx--tag bx--tag--blue"
              disabled={null}
              id="tag-24"
            >
              
              <span
                title="default"
              >
                default
              </span>
            </div>
            <div
              className="bx--tag bx--tag--disabled bx--tag--red"
              disabled={null}
              id="tag-25"
            >
              
              <span
                title="disabled tag"
              >
                disabled tag
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with disabled 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value iot--list-item--content--values__disabled"
              title="List Item"
            >
              List Item
            </div>
            <div
              className="iot--list-item--content--values--value iot--list-item--content--values__disabled"
              title="Secondary Value"
            >
              Secondary Value
            </div>
          </div>
          <div
            className="iot--list-item--content--row-actions"
            onClick={[Function]}
            onKeyPress={[Function]}
          >
            <button
              aria-describedby={null}
              className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--right bx--tooltip--align-center"
              data-testid="Button"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "black",
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                className="bx--assistive-text"
                onMouseEnter={[Function]}
              >
                Edit
              </div>
              <svg
                aria-hidden="true"
                aria-label="Edit"
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with icon 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--icon iot--list-item--content--icon__left"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,3.3l1.4,2.8l0.2,0.5l0.5,0.1l3.1,0.4L11,9.2l-0.4,0.4l0.1,0.5l0.5,3.1l-2.8-1.4L8,11.5l-0.5,0.2l-2.8,1.4l0.5-3.1	l0.1-0.5L5,9.2L2.8,7l3.1-0.4l0.5-0.1L6.6,6L8,3.3 M8,1L5.7,5.6L0.6,6.3l3.7,3.6L3.5,15L8,12.6l4.6,2.4l-0.9-5.1l3.7-3.6l-5.1-0.7	L8,1z"
            />
          </svg>
        </div>
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with isCategory 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        aria-label="Expand"
        className="iot--list-item--expand-icon"
        data-testid="expand-icon"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Expand"
      >
        <svg
          aria-label="Expand-icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </div>
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value iot--list-item--category"
              title="List Item"
            >
              List Item
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with isExpandable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        aria-label="Expand"
        className="iot--list-item--expand-icon"
        data-testid="expand-icon"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
        title="Expand"
      >
        <svg
          aria-label="Expand-icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </div>
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="Expandable List Item"
            >
              Expandable List Item
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with isLargeRow 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item iot--list-item__large"
    >
      <div
        className="iot--list-item--content iot--list-item--content__large"
      >
        <div
          className="iot--list-item--content--values iot--list-item--content--values__large"
        >
          <div
            className="iot--list-item--content--values--main iot--list-item--content--values--main__large"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
            <div
              className="iot--list-item--content--values--value iot--list-item--content--values--value__large"
              title="With isLargeRow, the secondary value serves primarily as a description field for the list item"
            >
              With isLargeRow, the secondary value serves primarily as a description field for the list item
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with isSelectable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item iot--list-item__selectable"
      data-testid={null}
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="Selectable List Item"
            >
              Selectable List Item
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with secondary value an object 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
            <div
              className="iot--list-item--content--values--value"
              title="Secondary value object"
            >
              <div>
                Secondary value object
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with secondaryValue 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
            <div
              className="iot--list-item--content--values--value"
              title="Secondary Value"
            >
              Secondary Value
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with single row action 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
            <div
              className="iot--list-item--content--values--value"
              title="Secondary Value"
            >
              Secondary Value
            </div>
          </div>
          <div
            className="iot--list-item--content--row-actions"
            onClick={[Function]}
            onKeyPress={[Function]}
          >
            <button
              aria-describedby={null}
              className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--right bx--tooltip--align-center"
              data-testid="Button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "black",
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                className="bx--assistive-text"
                onMouseEnter={[Function]}
              >
                Edit
              </div>
              <svg
                aria-hidden="true"
                aria-label="Edit"
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ListItem with value 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 400,
      }
    }
  >
    <div
      className="iot--list-item"
    >
      <div
        className="iot--list-item--content"
      >
        <div
          className="iot--list-item--content--values"
        >
          <div
            className="iot--list-item--content--values--main"
          >
            <div
              className="iot--list-item--content--values--value"
              title="List Item"
            >
              List Item
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
